fix: stars not responsive
Summary:

The following commit contains adjustments to stars CSS rules

Reason:

This commit is made to make stars more responsive

Testing:

I tested this manually

Notes:

a) Concerns:

Changing screen size

b) Future commits can contain:

Adding breakpoints for each scenario

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,11 +31,11 @@ li > a:hover {
 }
 
 .star-left {
-  margin-left: 16rem;
-  margin-top: 1.25rem;
+  margin-left: 13%;
+  margin-top: 1%;
 }
 
 .star-right {
-  margin-left: 76rem;
+  margin-left: 62.5%;
   margin-top: 9.5rem;
 }
